--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -26,7 +26,6 @@
                 <div class="modal-content">
                     <div class="modal-header bg-info text-white">
                         <h5 class="modal-title" id="staticBackdropLabel">
-                            Department Details
                         </h5>
                         <button type="button" class="btn-close text-white btn-close-white" data-bs-dismiss="modal"
                                 aria-label="Close"></button>
@@ -68,7 +67,7 @@
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Task Details</h5>
+                        <h5 class="modal-title"></h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body"></div>
@@ -115,7 +114,6 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">
-                            Department Details
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
@@ -171,254 +169,5 @@
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
-<script>
-
-    const form = document.getElementById("todo-form");
-    const input = document.getElementById("todo-input");
-    const todoLane = document.getElementById("todo-lane");
-    const draggables = document.querySelectorAll(".task");
-    const droppables = document.querySelectorAll(".swim-lane");
-    const modal = document.getElementById("task-details");
-
-    form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        const value = input.value;
-
-        if (!value) return;
-
-        let newTask = document.createElement('div');
-        newTask.classList.add('task', 'py-1', 'row', 'rounded-2', 'border-primary', 'border-2', 'border');
-        newTask.setAttribute('draggable', 'true');
-        newTask.setAttribute('data-bs-toggle', 'modal');
-        newTask.setAttribute('data-bs-target', '#task-details');
-
-        // Create the inner content of the task
-        newTask.innerHTML = `
-                <div class="col-12 mb-2 lh-1 mh-50 modal-detail-title text-break">
-                    ${value}
-                </div>
-                <div class="col d-flex justify-content-between align-items-center">
-                    <button class="btn btn-outline-danger">
-                        <i class="bi bi-trash-fill"></i>
-                    </button>
-                    <img src="https://source.unsplash.com/random/200x200?sig=1" class="img-fluid" alt="" style="width: 30px;">
-                </div>
-            `;
-
-        newTask.addEventListener("dragstart", (e) => {
-            newTask.classList.add("is-dragging");
-            console.log("deagging")
-        });
-
-        newTask.addEventListener('click', (e) => {
-            modal.querySelector('.modal-title').innerText = newTask.innerText
-        })
-
-        newTask.addEventListener("dragend", () => {
-            newTask.classList.remove("is-dragging");
-            console.log(newTask);
-        });
-
-        todoLane.appendChild(newTask);
-
-        input.value = "";
-    });
-
-    draggables.forEach((task) => {
-        task.addEventListener("dragstart", () => {
-            task.classList.add("is-dragging");
-        });
-        task.addEventListener("dragend", () => {
-            task.classList.remove("is-dragging");
-
-            console.log("drop");
-            console.log(
-                task.parentNode.previousElementSibling.innerText
-            );
-        });
-    });
-
-    droppables.forEach((zone) => {
-        zone.addEventListener("dragover", (e) => {
-            e.preventDefault();
-
-            const bottomTask = insertAboveTask(zone, e.clientY);
-            const curTask = document.querySelector(".is-dragging");
-
-            if (curTask === null) {
-                return
-            }
-
-            const curZone = zone.getAttribute("id");
-
-            switch (curZone) {
-                case "todo-lane":
-                    curTask.classList.add("border-primary");
-                    curTask.classList.remove(
-                        "border-dark",
-                        "border-success"
-                    );
-                    break;
-                case "doing-lane":
-                    curTask.classList.add("border-dark");
-                    curTask.classList.remove(
-                        "border-primary",
-                        "border-success"
-                    );
-                    break;
-                case "done-lane":
-                    curTask.classList.add("border-success");
-                    curTask.classList.remove(
-                        "border-primary",
-                        "border-dark"
-                    );
-                    break;
-            }
-
-            if (!bottomTask) {
-                zone.appendChild(curTask);
-            } else {
-                zone.insertBefore(curTask, bottomTask);
-            }
-        });
-    });const insertAboveTask = (zone, mouseY) => {
-        const els = zone.querySelectorAll(".task:not(.is-dragging)");
-
-        let closestTask = null;
-        let closestOffset = Number.NEGATIVE_INFINITY;
-
-        els.forEach((task) => {
-            const { top } = task.getBoundingClientRect();
-
-            const offset = mouseY - top;
-
-            if (offset < 0 && offset > closestOffset) {
-                closestOffset = offset;
-                closestTask = task;
-            }
-        });
-
-        return closestTask;
-    };
-
-    let sortableContainer = document.querySelector("#sort-container");
-    const modal = document.querySelector('div[id$="-details"]');
-
-    // recursive function to search paremtn element that contain data-bs-toggle
-    function hasDataBsToggleAttribute(element) {
-        if (element && element.hasAttribute("data-bs-toggle")) {
-            return element;
-        }
-
-        if (element && element.parentElement) {
-            return hasDataBsToggleAttribute(element.parentElement);
-        }
-    }
-
-    sortableContainer.addEventListener(
-        "click",
-        function (e) {
-            const grandpaDiv = hasDataBsToggleAttribute(e.target);
-            console.log("hihi");
-            if (grandpaDiv) {
-                modal.querySelector(".modal-title").innerText =
-                    grandpaDiv.querySelector(
-                        ".modal-detail-title"
-                    ).innerText;
-            }
-        },
-        false
-    );
-
-        const ctx = document.getElementById("department-projects-chart");
-
-        const firstChart = new Chart(ctx, {
-        type: "line",
-        data: {
-        labels: [
-        "January",
-        "February",
-        "March",
-        "Apirl",
-        "May",
-        "June",
-        "July",
-        "August",
-        "September",
-        "October",
-        "November",
-        "December",
-        ],
-
-        datasets: [
-    {
-        label: "project one",
-        backgroundColor: "rgba(255, 111, 200, 0.5)",
-        data: [0, 0, 3, 5, 2, 3],
-        fill: true,
-        borderColor: "rgb(255, 111, 200)",
-        pointRadius: 0,
-        borderWidth: 1,
-    },
-    {
-        label: "project two",
-        backgroundColor: "rgba(100, 111, 200, 0.5)",
-        data: [20, 10, 58, 12],
-        fill: true,
-        borderColor: "rgb(100, 111, 200)",
-        pointRadius: 0,
-        borderWidth: 1,
-    },
-    {
-        label: "project one",
-        backgroundColor: "rgba(255, 0, 0, 0.5)",
-        data: [23, 85, 10, 5, 25, 7, 65, 77, 10],
-        fill: true,
-        borderColor: "rgb(255, 0, 0)",
-        pointRadius: 0,
-        borderWidth: 1,
-    },
-    {
-        label: "project one",
-        backgroundColor: "rgba(0, 255, 0, 0.5)",
-        data: [5, 50, 10, 5, 54, 3, 65],
-        fill: true,
-        borderColor: "rgb(0, 255, 0)",
-        pointRadius: 0,
-        borderWidth: 1,
-    },
-    {
-        label: "project one",
-        backgroundColor: "rgba(0, 0, 255, 0.5)",
-        data: [
-        89, 45, 33, 15, 25, 3, 34, 44, 58, 89, 45, 33,
-        ],
-        fill: true,
-        borderColor: "rgb(0, 0, 255)",
-        pointRadius: 0,
-        borderWidth: 1,
-    },
-        ],
-    },
-        options: {
-        scales: {
-        y: {
-        beginAtZero: true,
-    },
-    },
-        animation: {
-        duration: 2000,
-    },
-        legend: {
-        display: true,
-    },
-        responsive: false
-    },
-    });
-
-        console.log(firstChart);
-        firstChart.config.options.animation.duration = 5000;
-
-</script>
 </body>
 </html>
