--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -62,33 +62,126 @@
         </div>
         <!-- modal for department's details -->
 
-        <!-- task's details start -->
-        <div class="modal fade" id="task-details" data-bs-keyboard="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title"></h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body"></div>
-                </div>
+<!-- task's details start -->
+<div class="modal fade" id="task-details" data-bs-keyboard="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content task-content">
+            <div class="modal-header">
+                <h2 class="card-title">Task Details</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-        </div>
-        <!-- task's details end -->
+            <div class="modal-body">
 
-        <!-- add task -->
-        <div class="modal fade" id="add-task" data-bs-keyboard="true">
-            <div class="modal-dialog modal-dialog-centered modal-xl">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <form id="todo-form">
-                            <input type="text" class="form-control" placeholder="New TODO..." id="todo-input" />
-                        </form>
+                <form class="row g-3" id="todo-form">
+                    <div class="col-lg-12">
+                        <label for="task" class="col-sm-12 col-form-label" name="task" id="task">Task</label>
+
                     </div>
-                </div>
+                    <div class="col-12">
+                        <label for="project" class="col-sm-2 col-form-label" name="project" id="project">Project</label>
+
+                    </div>
+
+                    <div class="col-12">
+                        <label for="pm" class="col-sm-12 col-form-label" name="pm" id="pm">Project Manager</label>
+
+                    </div>
+
+                    <div class="col-12">
+                        <label for="description" class="col-sm-12 col-form-label" name="description" id="description">Description</label>
+
+                    </div>
+
+                    <div class="col-md-12">
+                        <label for="start_time" class="col-sm-12 col-form-label" name="start_time" id="start_time">Start Date</label>
+
+                    </div>
+
+                    <div class="col-md-12">
+                        <label for="end_time" class="col-sm-12 col-form-label" name="end_time" id="end_time">End Date</label>
+
+                    </div>
+
+                    <div class="col-12">
+                        <label for="expected_mm" class="col-sm-12 col-form-label" name="expected_mm" id="expected_mm">Expected</label>
+
+                    </div>
+
+                    <div class="col-12">
+                        <label for="actual" class="col-sm-12 col-form-label" name="actual" id="actual">Actual</label>
+
+                    </div>
+
+                </form>
+
             </div>
         </div>
-        <!-- add task -->
+    </div>
+</div>
+<!-- task's details end -->
+
+<!-- add task -->
+<div class="modal fade" id="add-task" data-bs-keyboard="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content task-content">
+            <div class="modal-header">
+                <h2 class="card-title" style="text-align:center">Add Task</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+
+                <form class="row g-3" id="validation-form" action="project.html">
+                    <div class="col-lg-12">
+                        <label for="task" class="col-sm-12 col-form-label" name="task" id="task">Task</label>
+                        <input type="text" class="form-control border-task" id="task" name="task">
+                    </div>
+
+                    <div class="col-12">
+                        <label for="project" class="col-sm-2 col-form-label" name="project" id="project">Project</label>
+                        <input type="text" class="form-control border-task" id="project" name="project">
+                    </div>
+
+                    <div class="col-12">
+                        <label for="pm" class="col-sm-12 col-form-label" name="pm" id="pm">Project Manager</label>
+                        <input type="text" class="form-control border-task" id="pm" name="pm">
+                    </div>
+
+                    <div class="col-12">
+                        <label for="description" class="col-sm-12 col-form-label" name="description" id="description">Description</label>
+                        <textarea class="form-control border-task-description" id="description" name="description" rows="2"></textarea>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="start_time" class="col-sm-12 col-form-label" name="start_time" id="start_time">Start Date</label>
+                        <input type="date" class="form-control border-task" id="start_time" name="start_time">
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="end_time" class="col-sm-12 col-form-label" name="end_time" id="end_time">End Date</label>
+                        <input type="date" class="form-control border-task" id="end_time" name="end_time">
+                    </div>
+
+                    <div class="col-12">
+                        <label for="expected_mm" class="col-sm-12 col-form-label" name="expected_mm" id="expected_mm">Expected</label>
+                        <input type="text" class="form-control border-task" id="expected_mm" name="expected_mm">
+                    </div>
+
+                    <div class="col-12">
+                        <label for="actual" class="col-sm-12 col-form-label" name="actual" id="actual">Actual</label>
+                        <input type="text" class="form-control border-task" id="actual" name="actual">
+                    </div>
+
+
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary col-2" data-dismiss="modal">Add</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- add task -->
 
         <!-- confrim box for delete -->
         <div class="modal fade" id="confirm-box" data-bs-keyboard="false" data-bs-backdrop="static">
