--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -9,19 +9,19 @@
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
         <nav class="navbar navbar-light">
-            <a href="/dashboard" class="navbar-brand mx-4 mb-3">
+            <a th:href="@{/dashboard}" class="navbar-brand mx-4 mb-3">
                 <h3 class="text-primary">
-                    <i class="fa fa-hashtag me-2"></i>DASHMIN
+                    <i class="fa fa-hashtag me-2"></i>DAT
                 </h3>
             </a>
             <div class="navbar-nav w-100 gap-2">
                 <!-- TODO:: GOT TO MAIN/DASHBOARD -->
-                <a href="/dashboard" class="nav-item nav-link"><i
+                <a th:href="@{/dashboard}" class="nav-item nav-link"><i
                         class="bi bi-clipboard-data-fill me-1"></i>Dashboard</a>
                 <!-- TODO :: GOT TO DEPARTMENT LIST -->
-                <a href="/department" class="nav-item nav-link"><i
+                <a th:href="@{/department}" class="nav-item nav-link"><i
                         class="fa-solid fa-building"></i>Department</a>
-                <a href="/project/all" class="nav-item nav-link"><i class="bi bi-collection-fill me-1"></i>All
+                <a th:href="@{/project/all}" class="nav-item nav-link"><i class="bi bi-collection-fill me-1"></i>All
                     Projects</a>
             </div>
         </nav>
