--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -141,9 +141,21 @@
                             <select id="departmentSelect" class="form-select form-select-lg mb-3"
                                     aria-label=".form-select-lg example" style="font-size: 16px;">
                             </select>
+                            <div class="error-container d-none">
+                                <p class="text-danger fs-6 error-message" style="margin-top: 0;">
+                                    please select a department
+                                </p>
+                            </div>
+                        </div>
+                        <div>
                             <select id="projectManagerSelect" class="form-select form-select-lg mb-3"
                                     aria-label=".form-select-lg example" style="font-size: 16px;display: none">
                             </select>
+                            <div class="error-container d-none">
+                                <p class="text-danger fs-6 error-message" style="margin-top: 0;">
+                                    please select project manager
+                                </p>
+                            </div>
                         </div>
 
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-2" style="background-color: #369;"
@@ -159,34 +171,13 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Edit Employee</h5>
+                        Edit Employee
                     </div>
-                    <div class="modal-body">
-                        <!--alert message bootstrap-->
-                        <input type="hidden" id="userId" />
-
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="editName" placeholder="jhondoe" required>
-                            <label for="floatingText">Username</label>
-                        </div>
-
-
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="editEmail" placeholder="name@example.com"
-                                   required>
-                            <label for="floatingInput">Email address</label>
-                        </div>
-
-
-                            <div class="form-group">
-                                <select id="editDepartment" class="form-select form-select-lg mb-3"
-                                        aria-label=".form-select-lg example" style="font-size: 16px;" >
-                                </select>
-                            </div>
-
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-2" style="background-color: #369;" id="edit_btn">Edit </button>
+                    <div class="modal-body"></div>
+                    <div class="modal-footer">
+                        <button class="btn">
+                        </button>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -207,7 +198,6 @@
 <script src="/js/bootstrap.bundle.min.js"></script>
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
-<script src="/js/forprogresscircleiguess.js"></script>
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
@@ -234,7 +224,7 @@
     function operateFormatter(value,row,index){
         return [
             //edit button that opens edit modal
-            '<button class="btn btn-sm btn-primary edit-employee-btn" data-id="' + row.id + '" data-bs-toggle="modal" data-bs-target="#edit-employee-modal" title="Edit">Edit</button>',
+            '<button class="btn btn-sm btn-primary edit-employee-btn" data-bs-toggle="modal" data-bs-target="#edit-employee-modal" title="Edit">Edit</button>',
         ].join(' ');
     }
 
@@ -252,26 +242,10 @@
 
         $('.bootstrap-table').removeClass('bootstrap4').addClass('bootstrap5');
 
-        //change status of employee (active/inactive)
-        $('#table').on('change', '.status-switch', function () {
-            const checked = $(this).prop('checked');
-            const id = $(this).attr('id').split('_')[1];
-            const row = $('#table').bootstrapTable('getData')[id];
-            const url = '/api/user/update/employee/' + row.id + '/status/' + (checked ? 'true' : 'false');
-            $.ajax({
-                url: url,
-                type: 'PUT',
-                success: function (data) {
-                    $('#table').bootstrapTable('refresh');
-                },
-                error: function (data, xhr) {
-                    alert('Error updating employee status');
-                },
-                complete: function () {
-                    $('#table').bootstrapTable('refresh');
-                }
-            });
-        });
+        // if (event.target.classList.contains('status-switch')) {
+        //     //change status after clicking the switch
+        //
+        // }
 
         function getDepartmentNameList() {
             var departmentNameList = [];
@@ -281,7 +255,7 @@
                 async: false,
                 success: function (data) {
                     $.each(data, function (index, department) {
-                        departmentNameList.push(department.name);
+                        departmentNameList.push(department);
                     });
                 }
             });
@@ -291,10 +265,13 @@
         //initialize department list with department names
         var departmentNameList = getDepartmentNameList();
         $('#departmentSelect').empty();
+        $('#departmentSelect').append($('<option>', {
+                        text: 'Select Department',
+                    }));
         $.each(departmentNameList, function (index, departmentName) {
             $('#departmentSelect').append($('<option>', {
                 value: departmentName.id,
-                text: departmentName
+                text: departmentName.name
             }));
         });
 
@@ -303,13 +280,14 @@
             var selectedValue = $(this).val();
             var departmentSelect = $('#departmentSelect');
             var projectManagerSelect = $('#projectManagerSelect');
-
+            validateMemberRole()
+            console.log(selectedValue)
             if (selectedValue === 'PROJECT_MANAGER') {
                 // Show departmentSelect
                 departmentSelect.show();
 
                 // Hide projectManagerSelect and clear selected value
-                projectManagerSelect.val('').trigger('change');
+                projectManagerSelect.val('');
                 projectManagerSelect.hide();
 
 
@@ -332,12 +310,15 @@
                 projectManagerSelect.show();
 
                 // Hide departmentSelect and clear selected value
-                departmentSelect.val('').trigger('change');
+                departmentSelect.val('');
                 departmentSelect.hide();
 
                 // Make an AJAX request to populate projectManagerSelect options
                 $.get('/api/user/list/role/PROJECT_MANAGER', function (data) {
                     projectManagerSelect.empty();
+                    projectManagerSelect.append($('<option>', {
+                        text: 'Select Project manager',
+                    }));
                     $.each(data, function (index, user) {
                         projectManagerSelect.append($('<option>', {
                             value: user.id, // Adjust this based on your data
@@ -411,11 +392,13 @@
             }
         }
 
-        function validateDepartment() {
-            const department = $('#memberSelect').val();
+        function validateMemberRole() {
+            const role = $('#memberSelect').val();
+
+            console.log(role)
 
             const errorContainer = $('#memberSelect').siblings('.error-container');
-            if (!department || department.length === 0) {
+            if (!role ||role.length === 0) {
                 validatedForm = false;
                 if (errorContainer.length === 0) {
                     let p = $("<p>")
@@ -431,6 +414,15 @@
                 $('#memberSelect').addClass('is-invalid');
                 $('#memberSelect').removeClass('is-valid');
             } else {
+
+                if(role === 'PROJECT_MANAGER'){
+                    console.log("role is project manager so validate department")
+                    validateDepartment();
+                } else {
+                    console.log("role is not project manager so validate project manager")
+                    validateProjectManager();
+                }
+
                 validatedForm = true;
                 errorContainer.remove();
                 $('#memberSelect').addClass('is-valid');
@@ -439,22 +431,54 @@
         }
 
         function validateProjectManager() {
-            const role = $('#projectManagerSelect').val();
+            const projectmanager = $('#projectManagerSelect').val();
 
-            if (!role || role.length === 0) {
+            const errorContainer = $('#projectManagerSelect').siblings('.error-container');
+
+            $('#departmentSelect').siblings('.error-container').addClass('d-none')
+
+            console.log("eror for department should dispear")
+            
+            console.log(projectmanager)
+            if (isNaN(parseInt(projectmanager)) || parseInt(projectmanager) < 1) {
                 validatedForm = false;
+                errorContainer.removeClass('d-none')
 
+                $('#projectManagerSelect').addClass('is-invalid');
+                $('#projectManagerSelect').removeClass('is-valid');
             } else {
                 validatedForm = true;
+                errorContainer.addClass('d-none')
+                $('#projectManagerSelect').addClass('is-valid');
+                $('#projectManagerSelect').removeClass('is-invalid');
             }
         }
 
-        function validateIssue() {
-            validateUsername();
-            validateEmail();
-            validateDepartment();
-            validateProjectManager();
-            return validatedForm;
+        function validateDepartment() {
+            const department = $('#departmentSelect').val();
+
+            console.log(department)
+
+            $('#projectManagerSelect').siblings('.error-container').addClass('d-none')
+            console.log("error for project manager should dispear")
+
+            const errorContainer = $('#departmentSelect').siblings('.error-container');
+            
+            console.log(parseInt(department))
+            console.log(errorContainer)
+            if (isNaN(parseInt(department)) || parseInt(department) < 1) {
+                validatedForm = false;
+
+                errorContainer.removeClass('d-none')
+
+                $('#departmentSelect').addClass('is-invalid');
+                $('#departmentSelect').removeClass('is-valid');
+            } else {
+                validatedForm = true;
+                errorContainer.addClass('d-none')
+                $('#departmentSelect').addClass('is-valid');
+                $('#departmentSelect').removeClass('is-invalid');
+            }
         }
 
         $('#floatingText').on('input', function () {
@@ -465,10 +489,9 @@
             validateEmail();
         });
 
-        $('#memberSelect').on('change', function () {
+        $('#departmentSelect').on('change', function () {
             validateDepartment();
         });
-
         $('#projectManagerSelect').on('change', function () {
             validateProjectManager();
         });
@@ -481,13 +504,29 @@
             var departmentId = $('#departmentSelect').val();
             var projectManagerId = $('#projectManagerSelect').val();
 
+            console.log(username, email, role, departmentId, projectManagerId)
 
-            if (!validateIssue()) {
-                return;
+            console.log("user name", username)
+            console.log("email", email)
+            console.log("role", role)
+            console.log("department id", departmentId)
+            console.log("project manager id", projectManagerId)
+
+            validateUsername();
+            validateEmail();
+            validateMemberRole();
+            if(role === 'PROJECT_MANAGER'){
+                validateDepartment();
+            } else {
+                validateProjectManager();
             }
 
-            console.log("department id : ", departmentId)
-            console.log("pm id : ", projectManagerId)
+            if(!validatedForm) {
+                return
+            }
+
+            console.log("department id : ",departmentId)
+            console.log("pm id : ",projectManagerId)
 
             // Show a confirmation dialog using Swal
             Swal.fire({
@@ -535,156 +574,7 @@
         });
 
 
-        // for edit employee
-        $(document).on('click', '.edit-employee-btn', function () {
-            const employeeId = $(this).data('id');
-            console.log('Edit button clicked');
-            console.log("employeeId", employeeId);
-
-            $.ajax({
-                url: '/api/user/list/byId/' + employeeId,
-                type: 'GET',
-                dataType: 'json',
-                success: function (data) {
-                    console.log('Data received:', data);
-
-                    if (data && Object.keys(data).length > 0) {
-                        // Populate employee details in the modal
-                        $('#userId').val(data.id);
-                        $('#editName').val(data.name);
-                        $('#editEmail').val(data.email);
-                        if (data.hasOwnProperty('role') && data.role === 'PROJECT_MANAGER') {
-                            if (data.hasOwnProperty('department') && data.department !== null) {
-                                var departmentId = data.department.id;
-
-                                // Show the department select box
-                                $('#editDepartment').closest('.form-group').show();
-
-                                // Populate department options
-                                populateDepartmentOptions(departmentId);
-                            } else {
-                                console.log('No department information found for employeeId: ', employeeId);
-                            }
-                        } else {
-                            $('#editDepartment').closest('.form-group').hide();
-                        }
-
-                    } else {
-                        console.log('No or invalid data received for employeeId: ', employeeId);
-                    }
-                },
-                error: function (xhr, status, error) {
-                    console.log('AJAX error:', error);
-                    // Handle AJAX error
-                }
-            });
-        });
-
-        function populateDepartmentOptions(selectedDepartmentId) {
-            $.ajax({
-                url: '/api/department/list',
-                type: 'GET',
-                success: function (data) {
-                    var departmentSelect = $('#editDepartment');
-                    departmentSelect.empty();
-
-                    departmentSelect.append($('<option>', {
-                        value: '',
-                        text: 'Select Department',
-                    }));
-
-                    $.each(data, function (index, department) {
-                        departmentSelect.append($('<option>', {
-                            value: department.id,
-                            text: department.name,
-                            selected: department.id === selectedDepartmentId // Set selected based on the employee's department
-                        }));
-                    });
-                },
-                error: function (xhr, status, error) {
-                    console.log('Error fetching department list:', error);
-                }
-            });
-        }
-
-
-        $(document).on('click', '#edit_btn', function () {
-            const employeeId = $('#userId').val();
-            var username = $('#editName').val();
-            var email = $('#editEmail').val();
-            var departmentId = $('#editDepartment').val();
-
-            console.log("department id : ", departmentId);
-
-            if (username === "" || email === "" || departmentId === "") {
-                alert("Please enter Edit");
-                return;
-            }
-
-            console.log("employee id : ", employeeId);
-            console.log("department id : ", departmentId);
-
-            Swal.fire({
-                title: "Are you sure want to Edit this employee?",
-                icon: "warning",
-                showCancelButton: true,
-                confirmButtonColor: "#3085d6",
-                cancelButtonColor: "#d33",
-                confirmButtonText: "Yes"
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $('#edit_btn').html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Updating...');
-                    $('#edit_btn').prop('disabled', true);
-
-
-                    var apiUrl = '/api/user/update/' + employeeId;
-
-
-                     const payload = {
-                        id: employeeId,
-                        name: username,
-                        email: email,
-                        departmentId: departmentId,
-                    };
-
-                     console.log("payload", payload);
-
-
-                    $.ajax({
-                        url: apiUrl,
-                        type: 'PUT',
-                        data: JSON.stringify(payload),
-                        contentType: 'application/json',
-                        success: function (data) {
-                            console.log('Data received:', data);
-                            alert('Employee Update successfully');
-                            $('#edit-employee-modal').modal('hide');
-                            $('#edit_btn').html('Edit').prop('disabled', false);
-                            $('#table').bootstrapTable('refresh');
-                            showSuccess('Employee updated successfully');
-                        },
-                        error: function (xhr, status, error) {
-                            alert('Error updating employee');
-                            $('#edit_btn').html('Edit').prop('disabled', false);
-                            $('#alert-danger').show();
-                        },
-                        complete: function () {
-
-                        }
-                    });
-                }
-            });
-        });
-
-
-
-
     });
-
-
-
-
-
 
     function showError(message) {
         $('#error-message').text(message);
